tests/script_runtime_errors/subslice_no_arr/error.txt
Error: 
    1 | event[1:4]
      |       ^^^ Conflicting types, got string but expected array